# findmypast-take-home-test

./: README.md  findmypast-take-home-test.cabal  stack.yaml
lib/: LICENSE  findmypast-take-home-test-lib.cabal
lib/src/: Atkin.hs
lib/test/: Main.hs
src/: Atkin.hs
test/: Eratosthenes.hs  Main.hs
