Name: findmypast-take-home-test
Version: 1.1

License: MIT
License-File: LICENSE
Build-Type: Simple

Cabal-Version: >= 1.10


Library
  HS-Source-Dirs: src
  Exposed-Modules: Atkin

  Build-Depends: base
               , containers

  Default-Language: Haskell2010


Test-Suite tests
  Type:                exitcode-stdio-1.0
  HS-Source-Dirs:      test
  Main-Is:             Main.hs
  Other-Modules:       Eratosthenes
  Build-Depends:       base
                     , findmypast-take-home-test
                     , tasty
                     , tasty-quickcheck
  GHC-Options:         -threaded -rtsopts -with-rtsopts=-N
  Default-Language:    Haskell2010
